# FinDataAnalyzer

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  LICENSE  README.md  create_sample_data.py  create_test_model.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_api.py  test_api_simple.py  test_config.py  test_evaluate.py
configs/: logging.yaml  settings.yaml  test_config.yaml
configs/environments/: dev.env  prod.env  test.env
data/samples/chart_patterns/: metadata.json
data/samples/test/: metadata.json
docs/: index.md
experiments/tensorboard/: events.out.tfevents.1748030429.DESKTOP-SFLLGUL.14108.0
models/test/: model_info.json
results/evaluation/: evaluation_results_20250523_232349.json  evaluation_summary_20250523_232349.txt
src/findataanalyzer/: __init__.py  cli.py  evaluate.py  train.py
src/findataanalyzer/api/: __init__.py  main.py
src/findataanalyzer/core/: __init__.py  analyzer.py  celery_app.py  config.py  data_loader.py  database.py  predictor.py
src/findataanalyzer/data/: __init__.py  downloader.py
src/findataanalyzer/features/: __init__.py  feature_extractor.py
src/findataanalyzer/image_analysis/: __init__.py  tasks.py
src/findataanalyzer/models/: __init__.py  data_models.py  schema.py
src/findataanalyzer/scripts/: backtest.py  setup_server.py
src/findataanalyzer/strategy/: __init__.py  base.py  gemini_strategy.py  ml_strategy.py
tests/: conftest.py
tests/integration/: __init__.py  test_api.py  test_data_flow.py
tests/unit/: test_analyzer.py  test_predictor.py
(+38 files in other folders)
